--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   image_picker: ^0.8.4+2
+  firebase_core: ^2.13.1
+  cloud_firestore: ^4.8.0
+  firebase_storage: ^11.2.2
+  fluttertoast: ^8.2.2
+  flutter_local_notifications: ^14.1.1
 
 dev_dependencies:
   flutter_test:
